--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==20.6
-httpx==0.25.2
-apscheduler==3.10.4
-nest_asyncio==1.6.0
+python-telegram-bot[asyncio]>=20.0,<21.0
+apscheduler>=3.10,<4.0
+httpx>=0.24.0  # используется внутренне в python-telegram-bot
