--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==20.6
-openpyxl
-apscheduler==3.10.4
+pandas
+python-telegram-bot==20.8
+apscheduler
 pytz
-nest_asyncio==1.6.0
+nest_asyncio
